Fit - Funcionalidad de añadir la deadline de una tarea al calendario de manera simple y algunos endpoints extra para poder completar las tareas de una forma más sencilla