@@ -7,9 +7,12 @@ import com.tikal.api.exception.TeamBadRequestException;
 import com.tikal.api.model.dto.task.CreateProjectRequest;
 import com.tikal.api.model.dto.task.ProjectDTO;
 import com.tikal.api.model.dto.task.UpdateProjectRequest;
+import com.tikal.api.model.entity.CalendarEvent;
 import com.tikal.api.model.entity.Project;
 import com.tikal.api.model.entity.TeamMember;
 import com.tikal.api.model.entity.User;
+import com.tikal.api.model.entity.enumerated.EventType;
+import com.tikal.api.repository.CalendarEventRepository;
 import com.tikal.api.repository.ProjectRepository;
 import com.tikal.api.repository.TeamMemberRepository;
 import com.tikal.api.repository.TeamRepository;
@@ -18,6 +21,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,23 +30,36 @@ import java.util.stream.Collectors;
 public class ProjectService {
     private final ProjectRepository projectRepository;
     private final TeamRepository teamRepository;
-    private final UserService userService;
     private final TeamMemberRepository teamMemberRepository;
+    private final CalendarEventRepository calendarEventRepository;
+    private final UserService userService;
 
-    public List<Project> getMyProjects() {
+    public List<ProjectDTO> getMyProjects() {
         User currentUser = userService.getAuthenticatedUser();
 
-        return projectRepository.findByUserOwner_Id(currentUser.getId());
+        List<Project> projects = projectRepository.findByUserOwner_Id(currentUser.getId());
+
+        if (projects.isEmpty()) {
+            return List.of();
+        }
+
+        List<Integer> projectIds = projects.stream().map(Project::getId).toList();
+
+        return mapProjectsWithDeadlines(projects, projectIds);
     }
 
     public List<ProjectDTO> getMyTeamsProjects() {
         User currentUser = userService.getAuthenticatedUser();
 
-        List<Project> proyectos = projectRepository.findProjectsByUserId(currentUser.getId());
+        List<Project> projects = projectRepository.findProjectsByUserId(currentUser.getId());
 
-        return proyectos.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        if (projects.isEmpty()) {
+            return List.of();
+        }
+
+        List<Integer> projectIds = projects.stream().map(Project::getId).toList();
+
+        return mapProjectsWithDeadlines(projects, projectIds);
     }
 
     @Transactional
@@ -56,6 +74,7 @@ public class ProjectService {
         project.setUserOwner(currentUser);
         project.setIsGroupBased(request.getIsGroupBased() != null ? request.getIsGroupBased() : false);
 
+        // Team validation for admins
         if (project.getIsGroupBased()) {
             var team = teamRepository.findById(request.getTeamId())
                     .orElseThrow(() -> new TeamBadRequestException(request.getTeamId().toString()));
@@ -71,7 +90,14 @@ public class ProjectService {
 
         Project savedProject = projectRepository.save(project);
 
-        return mapToDTO(savedProject);
+         // Calendar event logic
+        boolean addToCalendar = false;
+        if (Boolean.TRUE.equals(request.getAddToCalendar()) && savedProject.getDeadline() != null) {
+            createDeadlineEvent(savedProject, currentUser);
+            addToCalendar = true;
+        }
+
+        return mapToDTO(savedProject, addToCalendar);
     }
 
     @Transactional
@@ -81,10 +107,12 @@ public class ProjectService {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new NotFoundProjectException("Proyecto no encontrado"));
 
+        // Security validation
         if (!project.getIsGroupBased() && !project.getUserOwner().getId().equals(currentUser.getId())) {
             throw new ProjectAccessDeniedException("No tienes permiso para borrar este proyecto.");
         }
 
+        // Team validation for admins
         if (project.getIsGroupBased()) {
             List<TeamMember> adminMembers =  teamMemberRepository.findTeamAdmins(project.getTeam().getId());
             boolean isCurrentUserAdmin = adminMembers.stream()
@@ -104,10 +132,12 @@ public class ProjectService {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new NotFoundProjectException("Proyecto no encontrado"));
 
+        // Security validation
         if (!project.getIsGroupBased() && !project.getUserOwner().getId().equals(currentUser.getId())) {
             throw new ProjectAccessDeniedException("No tienes permiso para editar este proyecto.");
         }
 
+        // Team validation for admins
         if (project.getIsGroupBased()) {
             List<TeamMember> adminMembers = teamMemberRepository.findTeamAdmins(project.getTeam().getId());
             boolean isCurrentUserAdmin = adminMembers.stream()
@@ -123,22 +153,86 @@ public class ProjectService {
         if (request.getLogo() != null) {
             project.setLogoUrl(request.getLogo());
         }
-
         project.setDeadline(request.getDeadline());
         project.setDescription(request.getDescription());
+
         Project updatedProject = projectRepository.save(project);
-        return mapToDTO(updatedProject);
+
+        boolean hasDeadline = syncDeadlineEvent(updatedProject, currentUser, request.getAddToCalendar());
+
+        return mapToDTO(updatedProject, hasDeadline);
     }
 
-    public ProjectDTO mapToDTO(Project project) {
+    // ==========================================
+    //          AUXILIARY METHODS
+    // ==========================================
+
+    private List<ProjectDTO> mapProjectsWithDeadlines(List<Project> projects, List<Integer> projectIds) {
+        List<CalendarEvent> deadlineEvents = calendarEventRepository
+                .findByProjectIdInAndEventTypeAndStageIsNullAndTaskIsNull(projectIds, EventType.DEADLINE);
+        
+        Set<Integer> projectsWithDeadline = deadlineEvents.stream()
+                .filter(event -> event.getProject() != null)
+                .map(event -> event.getProject().getId())
+                .collect(Collectors.toSet());
+
+        return projects.stream()
+                .map(project -> {
+                    boolean hasDeadlineEvent = projectsWithDeadline.contains(project.getId());
+                    return mapToDTO(project, hasDeadlineEvent);
+                })
+                .toList();
+    }
+
+    private void createDeadlineEvent(Project project, User user) {
+        CalendarEvent event = new CalendarEvent();
+        event.setName("Entrega: " + project.getName());
+        event.setInitDateTime(project.getDeadline().minusHours(1));
+        event.setEndDateTime(project.getDeadline());
+        event.setEventType(EventType.DEADLINE);
+        event.setUser(user);
+        event.setProject(project);
+        calendarEventRepository.save(event);
+    }
+
+    private boolean syncDeadlineEvent(Project project, User user, Boolean requestedAddToCalendar) {
+        // We search if the event exist in the database
+        Optional<CalendarEvent> existingEventOpt = calendarEventRepository
+                .findByProjectIdAndEventTypeAndStageIsNullAndTaskIsNull(project.getId(), EventType.DEADLINE);
+
+        boolean wantsInCalendar = Boolean.TRUE.equals(requestedAddToCalendar) && project.getDeadline() != null;
+
+        if (wantsInCalendar) {
+            if (existingEventOpt.isPresent()) {
+                // Case A: The user want in calendar, and it already existed -> We update the date and name in case it changed
+                CalendarEvent event = existingEventOpt.get();
+                event.setName("Entrega: " + project.getName());
+                event.setInitDateTime(project.getDeadline().minusHours(1));
+                event.setEndDateTime(project.getDeadline());
+                calendarEventRepository.save(event);
+            } else {
+                // Case B: The user want in calendar, and it doesn’t exist -> We’ll create it
+                createDeadlineEvent(project, user);
+            }
+            return true;
+        } else {
+            // Case C: The user don't want the deadline in the calendar, but exists -> We'll delete it
+            existingEventOpt.ifPresent(calendarEventRepository::delete);
+            return false;
+        }
+    }
+
+    private ProjectDTO mapToDTO(Project project, boolean addToCalendar) {
         return ProjectDTO.builder()
                 .id(project.getId())
                 .name(project.getName())
                 .description(project.getDescription())
+                .deadline(project.getDeadline())
                 .logo(project.getLogoUrl())
                 .isGroupBased(project.getIsGroupBased())
                 .teamId(project.getTeam() != null ? project.getTeam().getId() : null)
                 .teamName(project.getTeam() != null ? project.getTeam().getName() : null)
+                .addToCalendar(addToCalendar)
                 .build();
     }
 }
